[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[project]
name = "python-flow"
version = "0.0.2"
authors = [
	{ name="Daniel Ahlberg", email="daniel.ahlberg@kurbit.se" },
]
description = "Python bindings for Maintrac Flow"
dependencies = [ "python-dotenv","requests" ]
